<resources>
    <string name="app_name">Currency Converter</string>
    <string name="enter_amount">Enter amount</string>
    <string name="convert">Convert</string>
    <string name="converted_amount_will_appear_here">Converted amount will appear here</string>
    <string name="amount">Amount:</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="todo">TODO</string>
</resources>