<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/tvTitleApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_converter"
        android:textSize="24sp"
        android:textColor="#374BD7"
        android:layout_marginBottom="36dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-medium"
        android:shadowColor="#808080"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:padding="12dp" />

    <TextView
        android:id="@+id/tvAmountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_marginBottom="8dp"
        android:layout_gravity="start" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:minHeight="48dp"
        android:padding="12dp"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"
        android:textColor="#000000"
        android:background="@drawable/rounded_edittext"
        android:importantForAccessibility="yes"
        android:focusable="true"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center_horizontal" />

    <!-- Spinner Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp"
        android:gravity="center_vertical">

        <!-- Spinner From -->
        <Spinner
            android:id="@+id/spinnerFrom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:background="@drawable/rounded_spinner"
            android:padding="12dp"
            android:layout_gravity="center_vertical" />

        <ImageView
            android:id="@+id/ivExchange"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_exchange"
            android:layout_marginHorizontal="8dp"
            android:layout_gravity="center_vertical" />

        <Spinner
            android:id="@+id/spinnerTo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minHeight="48dp"
            android:background="@drawable/rounded_spinner"
            android:padding="12dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/convert"
        android:textColor="#FFFFFF"
        android:background="@drawable/rounded_button"
        android:textSize="16sp"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center_horizontal" />

    <!-- Result TextView -->
    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#000000"
        android:text="@string/converted_amount_will_appear_here"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
